--- a/index.html
+++ b/index.html
@@ -19,7 +19,30 @@
                 <div class="logo"><a href="#"><img src="img/logo.svg" alt="logo"></a></div>
                 <div class="search"><a href="#"><img src="img/search.svg" alt="search"></a></div>
                 <div class="spacing"></div>
-                <div class="menu"><a href="#"><img src="img/menu.svg" alt="menu"></a></div>
+                <div class="menu"><a href="#"><img src="img/menu.svg" alt="menu"></a>
+                    <div class="menu_box">
+                        <div class="menu_item">
+                            <h3 class="menu_heading">MAN</h3>
+                            <a href="#" class="menu_link">Accessories</a>
+                            <a href="#" class="menu_link">Bags</a>
+                            <a href="#" class="menu_link">Denim</a>
+                            <a href="#" class="menu_link">T-Shirts</a>
+                            <h3 class="menu_heading">WOMAN</h3>
+                            <a href="#" class="menu_link">Accessories</a>
+                            <a href="#" class="menu_link">Jackets &#38; Coats</a>
+                            <a href="#" class="menu_link">Polos</a>
+                            <a href="#" class="menu_link">T-Shirts</a>
+                            <h3 class="menu_heading">KIDS</h3>
+                            <a href="#" class="menu_link">Accessories</a>
+                            <a href="#" class="menu_link">Jackets &#38; Coats</a>
+                            <a href="#" class="menu_link">Polos</a>
+                            <a href="#" class="menu_link">T-Shirts</a>
+                            <a href="#" class="menu_link">Shirts</a>
+                            <a href="#" class="menu_link">Bags</a>
+
+                        </div>
+                    </div>
+                </div>
                 <div class="profile"><a href="#"><img src="img/profile.svg" alt="profile"></a></div>
                 <div class="cart"><a href="#"><img src="img/cart.svg" alt="cart"></a></div>
             </div>
@@ -35,30 +58,83 @@
     <div class="container content">
         <div class="catalogs_list ">
             <div class="dir"><a href="#"><img class="dir_img" src="img/women.jpg" alt="women"></a>
-                <div class="dir_text"><a href="#">30% OFF<br><span class="colored_text">FOR WOMEN</span></a>
-                </div>
+                <div class="dir_text"><a href="#" class="hover-this">30% OFF<br><span class="colored_text">FOR
+                            WOMEN</span></a></div>
             </div>
 
-
             <div class="dir dir_margin"><a href="#"><img class="dir_img" src="img/men.jpg" alt="men"></a>
-                <div class="dir_text"><a href="#">HOT DEAL<br><span class="colored_text">FOR MEN</span></a></div>
+                <div class="dir_text"><a href="#" class="hover-this">HOT DEAL<br><span class="colored_text">FOR
+                            MEN</span></a></div>
             </div>
 
             <div class="dir"><a href="#"><img class="dir_img" src="img/kids.jpg" alt="kids"></a>
-                <div class="dir_text"><a href="#">NEW ARRIVALS<br><span class="colored_text">FOR KIDS</span></a>
+                <div class="dir_text"><a href="#" class="hover-this">NEW ARRIVALS<br><span class="colored_text">FOR
+                            KIDS</span></a>
                 </div>
             </div>
 
         </div>
-
         <div class="dir"><a href="#"><img class="dir_img" src="img/accesories.jpg" alt="accesories"></a>
-            <div class="dir_text"><a href="#">LUXIROUS & TRENDY<br><span class="colored_text">ACCESORIES</span></a>
+            <div class="dir_text"><a href="#" class="hover-this">LUXIROUS &#38; TRENDY<br><span
+                        class="colored_text">ACCESORIES</span></a>
+            </div>
+        </div>
+    </div>
+    <div class="container fetured">Fetured Items</div>
+    <div class="container fetured_text">Shop for items based on what we featured in this week</div>
+    <div class="footer">
+        <div class="container footer_blocks footer_blocks_margin_top">
+            <div class="footer_block"><img src="img/delivery.png" alt="delivery"></div>
+            <div class="footer_block"><img src="img/sale.png" alt="sale"></div>
+            <div class="footer_block"><img src="img/quality.png" alt="quality"></div>
+        </div>
+        <div class="container footer_blocks">
+            <div class="footer_block">
+                <div class="footer_info">Free Delivery</div>
+                <div class="footer_info_more">Worldwide delivery on all. Authorit tively morph next-generation innov
+                    tion with extensive models.
+                </div>
+            </div>
+            <div class="footer_block">
+                <div class="footer_info">Sales &#38; discounts</div>
+                <div class="footer_info_more">Worldwide delivery on all. Authorit tively morph next-generation innov
+                    tion with extensive models.
+                </div>
+            </div>
+            <div class="footer_block">
+                <div class="footer_info">Quality assurance</div>
+                <div class="footer_info_more">Worldwide delivery on all. Authorit tively morph next-generation innov
+                    tion with extensive models.
+                </div>
+            </div>
+        </div>
+        <div class="sea_bg">
+            <div class="container greetings_and_subscribe">
+                <div class="greetings">
+                    <div class="greetings_foto"><img src="img/ellipse_foto.png" alt="ellipse"></div>
+                    <div class="greetings_text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar
+                        purus
+                        condimentum“
+                    </div>
+                </div>
+                <div class="subscribe">
+                    <div class="subscribe_text"><b>SUBSCRIBE</b><br>
+                        FOR OUR NEWLETTER AND PROMOTION</div>
+                    <div class="sub_form">
+                        <input type="text" class="subscribe_input" value="Enter your Email"><input type="button"
+                            class="subscribe_button" value="Subscribe">
+
+                    </div>
+                </div>
+
+
             </div>
         </div>
 
+        <div class="container">
+            <div class="copyright">© 2021 Brand All Rights Reserved.</div>
+        </div>
     </div>
-    <div class="footer"></div>
-
 
 
 </body>
