--- a/index.html
+++ b/index.html
@@ -19,7 +19,30 @@
                 <div class="logo"><a href="#"><img src="img/logo.svg" alt="logo"></a></div>
                 <div class="search"><a href="#"><img src="img/search.svg" alt="search"></a></div>
                 <div class="spacing"></div>
-                <div class="menu"><a href="#"><img src="img/menu.svg" alt="menu"></a></div>
+                <div class="menu"><a href="#"><img src="img/menu.svg" alt="menu"></a>
+                    <div class="menu_box">
+                        <div class="menu_item">
+                            <h3 class="menu_heading">MAN</h3>
+                            <a href="#" class="menu_link">Accessories</a>
+                            <a href="#" class="menu_link">Bags</a>
+                            <a href="#" class="menu_link">Denim</a>
+                            <a href="#" class="menu_link">T-Shirts</a>
+                            <h3 class="menu_heading">WOMAN</h3>
+                            <a href="#" class="menu_link">Accessories</a>
+                            <a href="#" class="menu_link">Jackets & Coats</a>
+                            <a href="#" class="menu_link">Polos</a>
+                            <a href="#" class="menu_link">T-Shirts</a>
+                            <h3 class="menu_heading">KIDS</h3>
+                            <a href="#" class="menu_link">Accessories</a>
+                            <a href="#" class="menu_link">Jackets & Coats</a>
+                            <a href="#" class="menu_link">Polos</a>
+                            <a href="#" class="menu_link">T-Shirts</a>
+                            <a href="#" class="menu_link">Shirts</a>
+                            <a href="#" class="menu_link">Bags</a>
+
+                        </div>
+                    </div>
+                </div>
                 <div class="profile"><a href="#"><img src="img/profile.svg" alt="profile"></a></div>
                 <div class="cart"><a href="#"><img src="img/cart.svg" alt="cart"></a></div>
             </div>
@@ -35,25 +58,24 @@
     <div class="container content">
         <div class="catalogs_list ">
             <div class="dir"><a href="#"><img class="dir_img" src="img/women.jpg" alt="women"></a>
-                <div class="dir_text"><a href="#">30% OFF<br><span class="colored_text">FOR WOMEN</span></a>
-                </div>
+                <div class="dir_text"><a href="#" class="hover-this">30% OFF<br><span class="colored_text">FOR
+                            WOMEN</span></a></div>
             </div>
 
-
             <div class="dir dir_margin"><a href="#"><img class="dir_img" src="img/men.jpg" alt="men"></a>
-                <div class="dir_text"><a href="#">HOT DEAL<br><span class="colored_text">FOR MEN</span></a></div>
+                <div class="dir_text"><a href="#" class="hover-this">HOT DEAL<br><span class="colored_text">FOR
+                            MEN</span></a></div>
             </div>
 
             <div class="dir"><a href="#"><img class="dir_img" src="img/kids.jpg" alt="kids"></a>
-                <div class="dir_text"><a href="#">NEW ARRIVALS<br><span class="colored_text">FOR KIDS</span></a>
+                <div class="dir_text"><a href="#" class="hover-this">NEW ARRIVALS<br><span class="colored_text">FOR
+                            KIDS</span></a>
                 </div>
             </div>
 
         </div>
-<<<<<<< Updated upstream
-=======
         <div class="dir"><a href="#"><img class="dir_img" src="img/accesories.jpg" alt="accesories"></a>
-            <div class="dir_text"><a href="#" class="hover-this">LUXIROUS &#38; TRENDY<br><span
+            <div class="dir_text"><a href="#" class="hover-this">LUXIROUS & TRENDY<br><span
                         class="colored_text">ACCESORIES</span></a>
             </div>
         </div>
@@ -79,10 +101,93 @@
                         </a>
                     </div>
                 </div>
+                <div class="item">
+                    <a href="#" class="item_link">
+                        <img class="item_img" src="img/product-2.jpg" alt="продукт 2">
+                        <div class="item_description">
+                            <p class="item_header">ELLERY X M'O CAPSULE</p>
+                            <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="item_price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add_to_cart_box">
+                        <a class="add_to_cart_item" href="#"><img src="img/tocart.svg" alt="add to cart">
+                            <div class="add_to_cart_txt">Add to cart</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="item">
+                    <a href="#" class="item_link">
+                        <img class="item_img" src="img/product-3.jpg" alt="продукт 3">
+                        <div class="item_description">
+                            <p class="item_header">ELLERY X M'O CAPSULE</p>
+                            <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="item_price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add_to_cart_box">
+                        <a class="add_to_cart_item" href="#"><img src="img/tocart.svg" alt="add to cart">
+                            <div class="add_to_cart_txt">Add to cart</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="item">
+                    <a href="#" class="item_link">
+                        <img class="item_img" src="img/product-4.jpg" alt="продукт 4">
+                        <div class="item_description">
+                            <p class="item_header">ELLERY X M'O CAPSULE</p>
+                            <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="item_price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add_to_cart_box">
+                        <a class="add_to_cart_item" href="#"><img src="img/tocart.svg" alt="add to cart">
+                            <div class="add_to_cart_txt">Add to cart</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="item">
+                    <a href="#" class="item_link">
+                        <img class="item_img" src="img/product-5.jpg" alt="продукт 5">
+                        <div class="item_description">
+                            <p class="item_header">ELLERY X M'O CAPSULE</p>
+                            <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="item_price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add_to_cart_box">
+                        <a class="add_to_cart_item" href="#"><img src="img/tocart.svg" alt="add to cart">
+                            <div class="add_to_cart_txt">Add to cart</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="item">
+                    <a href="#" class="item_link">
+                        <img class="item_img" src="img/product-6.jpg" alt="продукт 6">
+                        <div class="item_description">
+                            <p class="item_header">ELLERY X M'O CAPSULE</p>
+                            <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
+                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="item_price">$52.00</p>
+                        </div>
+                    </a>
+                    <div class="add_to_cart_box">
+                        <a class="add_to_cart_item" href="#"><img src="img/tocart.svg" alt="add to cart">
+                            <div class="add_to_cart_txt">Add to cart</div>
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="browser_button_div"><input type="button" class="browse_button " value="Browse All Product">
             </div>
 
-        </div><!-- container end-->
-    </section><!-- item section end-->
+        </div>
+    </section>
 
 
     <div class="footer">
@@ -130,17 +235,29 @@
                     </div>
                 </div>
 
->>>>>>> Stashed changes
 
-        <div class="dir"><a href="#"><img class="dir_img" src="img/accesories.jpg" alt="accesories"></a>
-            <div class="dir_text"><a href="#">LUXIROUS & TRENDY<br><span class="colored_text">ACCESORIES</span></a>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="links_box">
+                <div class="copyright">© 2021 Brand All Rights Reserved.</div>
+                <div class="spacing"></div>
+                <div class="links">
+                    <a href="#" alt="facebook" class="link link_f">
+                    </a>
+                    <a href="#" alt="instagram" class="link link_i">
+                    </a>
+                    <a href="#" alt="pinterest" class="link link_p">
+                    </a>
+                    <a href="#" alt="twitter" class="link link_t">
+                    </a>
+                </div>
+
             </div>
         </div>
 
     </div>
-    <div class="footer"></div>
-
-
 
 </body>
 
