corrections for practice 3

--- a/index.html
+++ b/index.html
@@ -244,13 +244,13 @@
                 <div class="copyright">© 2021 Brand All Rights Reserved.</div>
                 <div class="spacing"></div>
                 <div class="links">
-                    <a href="#" alt="facebook" class="link link_f">
+                    <a href="#" class="link link_f">
                     </a>
-                    <a href="#" alt="instagram" class="link link_i">
+                    <a href="#" class="link link_i">
                     </a>
-                    <a href="#" alt="pinterest" class="link link_p">
+                    <a href="#" class="link link_p">
                     </a>
-                    <a href="#" alt="twitter" class="link link_t">
+                    <a href="#" class="link link_t">
                     </a>
                 </div>
 
