catalog page is ready

--- a/catalog.html
+++ b/catalog.html
@@ -272,11 +272,26 @@
 
 
             </div>
-            <div class="browser_button_div"><input type="button" class="browse_button " value="Browse All Product">
-            </div>
-
         </div>
     </section>
+    <nav>
+        <div class="container">
+            <div class="pagination_box">
+                <div class="pagination">
+                    <a class="pag_item ltgt" href="#">&lt;</a>
+                    <span class="pag_item active" href="#">1</span>
+                    <a class="pag_item" href="#">2</a>
+                    <a class="pag_item" href="#">3</a>
+                    <a class="pag_item" href="#">4</a>
+                    <a class="pag_item" href="#">5</a>
+                    <a class="pag_item" href="#">6</a>
+                    <span class="pag_item">...</span>
+                    <a class="pag_item" href="#">20</a>
+                    <a class="pag_item ltgt" href="#">&gt;</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
 
     <div class="footer">
