--- a/catalog.html
+++ b/catalog.html
@@ -279,7 +279,7 @@
             <div class="pagination_box">
                 <div class="pagination">
                     <a class="pag_item ltgt" href="#">&lt;</a>
-                    <span class="pag_item active" href="#">1</span>
+                    <span class="pag_item active_page" href="#">1</span>
                     <a class="pag_item" href="#">2</a>
                     <a class="pag_item" href="#">3</a>
                     <a class="pag_item" href="#">4</a>
