--- a/product.html
+++ b/product.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop</title>
+    <title>Product</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/7b409233c8.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -48,43 +50,58 @@
                 <div class="cart"><a href="#"><img src="img/cart.svg" alt="cart"></a></div>
             </div>
         </div>
-        <div class="label">
-            <div class="container label_block">
-                <div class="lb_foto"><img src="img/gr_foto.png" alt="foto"></div>
-                <div class="label_logo"><img src="img/label.png" alt="THE BRAND OF LUXERIOUS FASHION"></div>
-            </div>
-        </div>
+
     </div>
 
-    <div class="container content">
-        <div class="catalogs_list ">
-            <div class="dir"><a href="#"><img class="dir_img" src="img/women.jpg" alt="women"></a>
-                <div class="dir_text"><a href="#" class="hover-this">30% OFF<br><span class="colored_text">FOR
-                            WOMEN</span></a></div>
-            </div>
-
-            <div class="dir dir_margin"><a href="#"><img class="dir_img" src="img/men.jpg" alt="men"></a>
-                <div class="dir_text"><a href="#" class="hover-this">HOT DEAL<br><span class="colored_text">FOR
-                            MEN</span></a></div>
-            </div>
-
-            <div class="dir"><a href="#"><img class="dir_img" src="img/kids.jpg" alt="kids"></a>
-                <div class="dir_text"><a href="#" class="hover-this">NEW ARRIVALS<br><span class="colored_text">FOR
-                            KIDS</span></a>
+    <nav>
+        <div class="nav_all">
+            <div class="container">
+                <div class="nav_items">
+                    <div class="catalog_name">NEW ARRIVALS </div>
+                    <div class="breadcrumbs">
+                        <div aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item breadcrumb-item_custom"><a href="#">Home</a></li>
+                                <li class="breadcrumb-item breadcrumb-item_custom"><a href="#">MEN</a></li>
+                                <li class="breadcrumb-item active_custom" aria-current="page">NEW ARRIVALS</li>
+                            </ol>
+                        </div>
+                    </div>
                 </div>
             </div>
-
         </div>
-        <div class="dir"><a href="#"><img class="dir_img" src="img/accesories.jpg" alt="accesories"></a>
-            <div class="dir_text"><a href="#" class="hover-this">LUXIROUS & TRENDY<br><span
-                        class="colored_text">ACCESORIES</span></a>
+
+    </nav>
+    <div class="carousel_folder">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/carousel_foto.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/carousel_2.png" class="d-block w-100" alt="...">
+                </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </div>
-    <section class="item_section">
+    <div class="product_banner_container">&nbsp;
+        <div class="product_banner">
+            <div>Under consctruction</div>
+        </div>
+    </div>
+
+    <section class="catalog_item_section">
         <div class="container">
-            <div class="section_header">Fetured Items</div>
-            <div class="section_text">Shop for items based on what we featured in this week</div>
             <div class="item_flex">
                 <div class="item">
                     <a href="#" class="item_link">
@@ -104,7 +121,7 @@
                 </div>
                 <div class="item">
                     <a href="#" class="item_link">
-                        <img class="item_img" src="img/product-2.jpg" alt="продукт 2">
+                        <img class="item_img" src="img/product-1_2.jpg" alt="продукт 2">
                         <div class="item_description">
                             <p class="item_header">ELLERY X M'O CAPSULE</p>
                             <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
@@ -134,62 +151,10 @@
                         </a>
                     </div>
                 </div>
-                <div class="item">
-                    <a href="#" class="item_link">
-                        <img class="item_img" src="img/product-4.jpg" alt="продукт 2-1">
-                        <div class="item_description">
-                            <p class="item_header">ELLERY X M'O CAPSULE</p>
-                            <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                            <p class="item_price">$52.00</p>
-                        </div>
-                    </a>
-                    <div class="add_to_cart_box">
-                        <a class="add_to_cart_item" href="#"><i class="fa fa-solid fa-cart-shopping"></i>
-                            <div class="add_to_cart_txt">Add to cart</div>
-                        </a>
-                    </div>
-                </div>
-                <div class="item">
-                    <a href="#" class="item_link">
-                        <img class="item_img" src="img/product-5.jpg" alt="продукт 2-2">
-                        <div class="item_description">
-                            <p class="item_header">ELLERY X M'O CAPSULE</p>
-                            <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                            <p class="item_price">$52.00</p>
-                        </div>
-                    </a>
-                    <div class="add_to_cart_box">
-                        <a class="add_to_cart_item" href="#"><i class="fa fa-solid fa-cart-shopping"></i>
-                            <div class="add_to_cart_txt">Add to cart</div>
-                        </a>
-                    </div>
-                </div>
-                <div class="item">
-                    <a href="#" class="item_link">
-                        <img class="item_img" src="img/product-6.jpg" alt="продукт 2-3">
-                        <div class="item_description">
-                            <p class="item_header">ELLERY X M'O CAPSULE</p>
-                            <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                            <p class="item_price">$52.00</p>
-                        </div>
-                    </a>
-                    <div class="add_to_cart_box">
-                        <a class="add_to_cart_item" href="#"><i class="fa fa-solid fa-cart-shopping"></i>
-                            <div class="add_to_cart_txt">Add to cart</div>
-                        </a>
-                    </div>
-                </div>
-
-
             </div>
         </div>
-        <div class="browser_button_div"><input type="button" class="browse_button " value="Browse All Product">
-        </div>
-
     </section>
+
     <div class="footer">
         <div class="container footer_blocks footer_blocks_margin_top">
             <div class="footer_block"><img src="img/delivery.png" alt="delivery"></div>
@@ -260,7 +225,9 @@
 
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
