--- a/product.html
+++ b/product.html
@@ -96,7 +96,13 @@
     </div>
     <div class="product_banner_container">&nbsp;
         <div class="product_banner">
-            <div>Under consctruction</div>
+            <div class="product_banner_header">WOMEN COLLECTION</div>
+            <div class="line1"></div>
+            <div>MOSCHINO CHEAP AND CHIC</div>
+            <div>Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate
+                collaborative architectures before cutting-edge services. Completely visualize parallel core
+                competencies rather than exceptional portals. </div>
+            <div>$561</div>
         </div>
     </div>
 
