--- a/product.html
+++ b/product.html
@@ -94,22 +94,26 @@
             </button>
         </div>
     </div>
-    <div class="product_banner_container">&nbsp;
-        <div class="product_banner">
+    <div class="container">
+
+        <div class="product_banner container">
             <div class="product_banner_header">WOMEN COLLECTION</div>
             <div class="line1"></div>
-            <div>MOSCHINO CHEAP AND CHIC</div>
-            <div>Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate
+            <div class="product_banner_header subheader">MOSCHINO CHEAP AND CHIC</div>
+            <div class="product_banner_txt">Compellingly actualize fully researched processes before proactive
+                outsourcing. Progressively syndicate
                 collaborative architectures before cutting-edge services. Completely visualize parallel core
                 competencies rather than exceptional portals. </div>
-            <div>$561</div>
+            <div class="product_banner_price">$561</div>
         </div>
+
     </div>
 
-    <section class="catalog_item_section">
-        <div class="container">
-            <div class="item_flex">
-                <div class="item">
+    <section class="catalog_item_section" style="border:1px solid blue">
+        <div class="container" style="border:1px solid green; background-color: aqua;">
+            <div class="item_flex" style="border:1px solid grey">
+                <!--
+                   <div class="item">
                     <a href="#" class="item_link">
                         <img class="item_img" src="img/product-1.jpg" alt="продукт 1">
                         <div class="item_description">
@@ -157,6 +161,7 @@
                         </a>
                     </div>
                 </div>
+            -->
             </div>
         </div>
     </section>
