--- a/product.html
+++ b/product.html
@@ -97,68 +97,92 @@
     <div class="product_banner_container">&nbsp;
         <div class="product_banner">
             <div class="product_banner_header">WOMEN COLLECTION</div>
-            <div class="line1"></div>
-            <div>MOSCHINO CHEAP AND CHIC</div>
-            <div>Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate
+            <div class="product_banner_line_color"></div>
+            <div class="product_banner_subheader">MOSCHINO CHEAP AND CHIC</div>
+            <div class="product_banner_txt">Compellingly actualize fully researched processes before proactive
+                outsourcing. Progressively syndicate
                 collaborative architectures before cutting-edge services. Completely visualize parallel core
                 competencies rather than exceptional portals. </div>
-            <div>$561</div>
+            <div class="product_banner_price">$561</div>
+            <div class="product_banner_line_grey"></div>
+            <div class="filter_lists_all filter_lists_product">
+                <div class="filter_list filter_trends"><a href="#"> TRENDING NOW<i
+                            class="fa fa-solid fa-angle-down"></i></a>
+                </div>
+                <div class="filter_list filter_size"><a href="#">SIZE<i class="fa fa-solid fa-angle-down"></i></a>
+                    <div class="size_menu_box">
+                        <div class="size_menu_item"><input type="checkbox" class="checkbox"> XS</div>
+                        <div class="size_menu_item"><input type="checkbox" class="checkbox"> S</div>
+                        <div class="size_menu_item"><input type="checkbox" class="checkbox"> M</div>
+                        <div class="size_menu_item"><input type="checkbox" class="checkbox"> L</div>
+
+                    </div>
+                </div>
+                <div class="filter_list filter_price"><a href="#">PRICE<i class="fa fa-solid fa-angle-down"></i></a>
+                </div>
+
+            </div>
+
+            <a class="add_to_cart_item_product" href="#"><i class="fa fa-solid fa-cart-shopping colored"></i>
+                <div class="add_to_cart_txt colored">Add to cart</div>
+            </a>
+
         </div>
     </div>
 
     <section class="catalog_item_section">
-        <div class="container">
-            <div class="item_flex">
-                <div class="item">
-                    <a href="#" class="item_link">
-                        <img class="item_img" src="img/product-1.jpg" alt="продукт 1">
-                        <div class="item_description">
-                            <p class="item_header">ELLERY X M'O CAPSULE</p>
-                            <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                            <p class="item_price">$52.00</p>
-                        </div>
-                    </a>
-                    <div class="add_to_cart_box">
-                        <a class="add_to_cart_item" href="#"><i class="fa fa-solid fa-cart-shopping"></i>
-                            <div class="add_to_cart_txt">Add to cart</div>
-                        </a>
+
+        <div class="container item_flex">
+            <div class="item">
+                <a href="#" class="item_link">
+                    <img class="item_img" src="img/product-1.jpg" alt="продукт 1">
+                    <div class="item_description">
+                        <p class="item_header">ELLERY X M'O CAPSULE</p>
+                        <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
+                            arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <p class="item_price">$52.00</p>
                     </div>
+                </a>
+                <div class="add_to_cart_box">
+                    <a class="add_to_cart_item" href="#"><i class="fa fa-solid fa-cart-shopping"></i>
+                        <div class="add_to_cart_txt">Add to cart</div>
+                    </a>
                 </div>
-                <div class="item">
-                    <a href="#" class="item_link">
-                        <img class="item_img" src="img/product-1_2.jpg" alt="продукт 2">
-                        <div class="item_description">
-                            <p class="item_header">ELLERY X M'O CAPSULE</p>
-                            <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                            <p class="item_price">$52.00</p>
-                        </div>
-                    </a>
-                    <div class="add_to_cart_box">
-                        <a class="add_to_cart_item" href="#"><i class="fa fa-solid fa-cart-shopping"></i>
-                            <div class="add_to_cart_txt">Add to cart</div>
-                        </a>
+            </div>
+            <div class="item">
+                <a href="#" class="item_link">
+                    <img class="item_img" src="img/product-1_2.jpg" alt="продукт 2">
+                    <div class="item_description">
+                        <p class="item_header">ELLERY X M'O CAPSULE</p>
+                        <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
+                            arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <p class="item_price">$52.00</p>
                     </div>
+                </a>
+                <div class="add_to_cart_box">
+                    <a class="add_to_cart_item" href="#"><i class="fa fa-solid fa-cart-shopping"></i>
+                        <div class="add_to_cart_txt">Add to cart</div>
+                    </a>
                 </div>
-                <div class="item">
-                    <a href="#" class="item_link">
-                        <img class="item_img" src="img/product-3.jpg" alt="продукт 3">
-                        <div class="item_description">
-                            <p class="item_header">ELLERY X M'O CAPSULE</p>
-                            <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                            <p class="item_price">$52.00</p>
-                        </div>
-                    </a>
-                    <div class="add_to_cart_box">
-                        <a class="add_to_cart_item" href="#"><i class="fa fa-solid fa-cart-shopping"></i>
-                            <div class="add_to_cart_txt">Add to cart</div>
-                        </a>
+            </div>
+            <div class="item">
+                <a href="#" class="item_link">
+                    <img class="item_img" src="img/product-3.jpg" alt="продукт 3">
+                    <div class="item_description">
+                        <p class="item_header">ELLERY X M'O CAPSULE</p>
+                        <p class="item_text">Known for her sculptural takes on traditional tailoring, Australian
+                            arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                        <p class="item_price">$52.00</p>
                     </div>
+                </a>
+                <div class="add_to_cart_box">
+                    <a class="add_to_cart_item" href="#"><i class="fa fa-solid fa-cart-shopping"></i>
+                        <div class="add_to_cart_txt">Add to cart</div>
+                    </a>
                 </div>
             </div>
         </div>
+
     </section>
 
     <div class="footer">
