адаптив для index.html

--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
                 <div class="search"><a href="#"><img src="img/search.svg" alt="search"></a></div>
                 <div class="spacing"></div>
                 <div class="menu"><a href="#"><img src="img/menu.svg" alt="menu"></a>
-                    <div class="menu_box">
+                    <div class="menu_box fade-in">
                         <div class="menu_item">
                             <h3 class="menu_heading">MAN</h3>
                             <a href="#" class="menu_link">Accessories</a>
@@ -76,7 +76,7 @@
                     <div class="filter_txt">Filter<img src="img/filter.png" class="filter_img"></div>
                 </a>
 
-                <div class="filter_menu_box">
+                <div class="filter_menu_box  fade-in">
                     <div class="filter_txt_menu">Filter<img src="img/filter_r.png" class="filter_img"></div>
 
                     <div class="filter_menu_header">
