--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="top_menu">
             <div class="container top_menu_block">
                 <div class="logo"><a href="#"><img src="img/logo.svg" alt="logo"></a></div>
-                <div class="search"><a href="#"><img src="img/search.svg" alt="search"></a></div>
+                <div class="search "><a href="#"><img src="img/search.svg" alt="search"></a></div>
                 <div class="spacing"></div>
-                <div class="menu"><a href="#"><img src="img/menu.svg" alt="menu"></a>
-                    <div class="menu_box">
+                <div class="menu "><a href="#"><img src="img/menu.svg" alt="menu"></a>
+                    <div class="menu_box fade-in">
                         <div class="menu_item">
                             <h3 class="menu_heading">MAN</h3>
                             <a href="#" class="menu_link">Accessories</a>
@@ -50,8 +50,11 @@
         </div>
         <div class="label">
             <div class="container label_block">
-                <div class="lb_foto"><img src="img/gr_foto.png" alt="foto"></div>
-                <div class="label_logo"><img src="img/label.png" alt="THE BRAND OF LUXERIOUS FASHION"></div>
+                <div class="lb_foto_box">
+                    <div class="label_foto"></div>
+                </div>
+                <div class="label_logo"><img class="label_logo_img" src="img/label.png"
+                        alt="THE BRAND OF LUXERIOUS FASHION"></div>
             </div>
         </div>
     </div>
@@ -192,24 +195,24 @@
     </section>
     <div class="footer">
         <div class="container footer_blocks footer_blocks_margin_top">
-            <div class="footer_block"><img src="img/delivery.png" alt="delivery"></div>
-            <div class="footer_block"><img src="img/sale.png" alt="sale"></div>
-            <div class="footer_block"><img src="img/quality.png" alt="quality"></div>
         </div>
         <div class="container footer_blocks">
             <div class="footer_block">
+                <div class="footer_block"><img src="img/delivery.png" alt="delivery"></div>
                 <div class="footer_info">Free Delivery</div>
                 <div class="footer_info_more">Worldwide delivery on all. Authorit tively morph next-generation innov
                     tion with extensive models.
                 </div>
             </div>
             <div class="footer_block">
+                <div class="footer_block"><img src="img/sale.png" alt="sale"></div>
                 <div class="footer_info">Sales &#38; discounts</div>
                 <div class="footer_info_more">Worldwide delivery on all. Authorit tively morph next-generation innov
                     tion with extensive models.
                 </div>
             </div>
             <div class="footer_block">
+                <div class="footer_block"><img src="img/quality.png" alt="quality"></div>
                 <div class="footer_info">Quality assurance</div>
                 <div class="footer_info_more">Worldwide delivery on all. Authorit tively morph next-generation innov
                     tion with extensive models.
