--- a/registration.html
+++ b/registration.html
@@ -21,7 +21,7 @@
                 <div class="search"><a href="#"><img src="img/search.svg" alt="search"></a></div>
                 <div class="spacing"></div>
                 <div class="menu"><a href="#"><img src="img/menu.svg" alt="menu"></a>
-                    <div class="menu_box">
+                    <div class="menu_box  fade-in">
                         <div class="menu_item">
                             <h3 class="menu_heading">MAN</h3>
                             <a href="#" class="menu_link">Accessories</a>
