--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header">
         <div class="top_menu">
             <div class="container top_menu_block">
-                <div class="logo"><a href="#"><img src="img/logo.svg" alt="logo"></a></div>
+                <div class="logo"><a href="index.html"><img src="img/logo.svg" alt="logo"></a></div>
                 <div class="search"><a href="#"><img src="img/search.svg" alt="search"></a></div>
                 <div class="spacing"></div>
                 <div class="menu"><a href="#"><img src="img/menu.svg" alt="menu"></a></div>
