--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
     <div class="header">
         <div class="top_menu">
             <div class="container top_menu_block">
-                <div class="logo"><a href="#"><img src="img/logo.svg" alt="logo"></a></div>
+                <div class="logo"><a href="index.html"><img src="img/logo.svg" alt="logo"></a></div>
                 <div class="search"><a href="#"><img src="img/search.svg" alt="search"></a></div>
                 <div class="spacing"></div>
                 <div class="menu"><a href="#"><img src="img/menu.svg" alt="menu"></a>
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="profile"><a href="#"><img src="img/profile.svg" alt="profile"></a></div>
+                <div class="profile"><a href="registration.html"><img src="img/profile.svg" alt="profile"></a></div>
                 <div class="cart"><a href="#"><img src="img/cart.svg" alt="cart"></a></div>
             </div>
         </div>
