--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header">
         <div class="top_menu">
             <div class="container top_menu_block">
-                <div class="logo"><a href="#"><img src="img/logo.svg" alt="logo"></a></div>
+                <div class="logo"><a href="index.html"><img src="img/logo.svg" alt="logo"></a></div>
                 <div class="search "><a href="#"><img src="img/search.svg" alt="search"></a></div>
                 <div class="spacing"></div>
                 <div class="menu "><a href="#"><img src="img/menu.svg" alt="menu"></a>
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="profile"><a href="#"><img src="img/profile.svg" alt="profile"></a></div>
+                <div class="profile"><a href="registration.html"><img src="img/profile.svg" alt="profile"></a></div>
                 <div class="cart"><a href="#"><img src="img/cart.svg" alt="cart"></a></div>
             </div>
         </div>
@@ -53,7 +53,7 @@
                 <div class="lb_foto_box">
                     <div class="label_foto"></div>
                 </div>
-                <div class="label_logo"><img class="label_logo_img" src="img/label.png"
+                <div class="label_logo"><img class="label_logo_img heartbeat" src="img/label.png"
                         alt="THE BRAND OF LUXERIOUS FASHION"></div>
             </div>
         </div>
@@ -189,7 +189,8 @@
 
             </div>
         </div>
-        <div class="browser_button_div"><input type="button" class="browse_button " value="Browse All Product">
+        <div class="browser_button_div"><input type="button" class="browse_button"
+                onclick="document.location='catalog.html'" value="Browse All Product">
         </div>
 
     </section>
