--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
                     <a href="#" class="link"><i class="fa fa-brands fa-twitter"></i>
                     </a>
                 </div>
+                <div class="copyright_375">© 2021 Brand All Rights Reserved.</div>
 
             </div>
 
