--- a/catalog.html
+++ b/catalog.html
@@ -61,8 +61,8 @@
                     <div class="breadcrumbs">
                         <div aria-label="breadcrumb">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item breadcrumb-item_custom"><a href="#">Home</a></li>
-                                <li class="breadcrumb-item breadcrumb-item_custom"><a href="#">MEN</a></li>
+                                <li class="breadcrumb-item breadcrumb-item_custom"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item breadcrumb-item_custom"><a href="catalog.html">MEN</a></li>
                                 <li class="breadcrumb-item active_custom" aria-current="page">NEW ARRIVALS</li>
                             </ol>
                         </div>
@@ -76,7 +76,7 @@
                     <div class="filter_txt">Filter<img src="img/filter.png" class="filter_img"></div>
                 </a>
 
-                <div class="filter_menu_box  fade-in">
+                <div class="filter_menu_box fade-in">
                     <div class="filter_txt_menu">Filter<img src="img/filter_r.png" class="filter_img"></div>
 
                     <div class="filter_menu_header">
