--- a/catalog.html
+++ b/catalog.html
@@ -61,8 +61,8 @@
                     <div class="breadcrumbs">
                         <div aria-label="breadcrumb">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item breadcrumb-item_custom"><a href="#">Home</a></li>
-                                <li class="breadcrumb-item breadcrumb-item_custom"><a href="#">MEN</a></li>
+                                <li class="breadcrumb-item breadcrumb-item_custom"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item breadcrumb-item_custom"><a href="product.html">MEN</a></li>
                                 <li class="breadcrumb-item active_custom" aria-current="page">NEW ARRIVALS</li>
                             </ol>
                         </div>
